added eux doc and few changes

--- a/uddannelse.html
+++ b/uddannelse.html
@@ -18,11 +18,10 @@
 			HTX
 		</a>
 	</div>
-	<img src="">
 
 <!-- EUX -->
 	<div>
-		<a href="">
+		<a href="eux_link.html">
 			EUX
 		</a>
 	</div>
