adding forms to hhx and htx

--- a/hhx_link.html
+++ b/hhx_link.html
@@ -5,49 +5,26 @@
 </head>
 <body>
 	<header><h1>Studieretninger</h1></header>
-	
-	<div>
-		<a href="">
-			Apple Innovation
-		</a>
-	</div>
+		
 
-	<div>
-		<a href="">
-			Business International
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Business Talent
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Innovation og Iværksætteri
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Juralinjen
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Marketing og Samfund
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Marketing og Kommunikation 
-		</a>
-	</div>
-
+<!-- Form using radio type, allows user to only select one option -->
+	<form>
+		<input type="radio" name="linje">Apple Innovation
+			<br>
+		<input type="radio" name="linje">Business International
+			<br>
+		<input type="radio" name="linje">Business Talent
+			<br>
+		<input type="radio" name="linje">Innovation og Iværksætteri
+			<br>
+		<input type="radio" name="linje">Juralinjen
+			<br>
+		<input type="radio" name="linje">Marketing og Samfund
+			<br>
+		<input type="radio" name="linje">Marketing og Kommunikation
+			<br><br>
+		<input type="submit" name="submit">
+	</form>
 
 </body>
 </html>
