--- a/htx_link.html
+++ b/htx_link.html
@@ -5,37 +5,21 @@
 </head>
 <body>
 	<header><h1>Studieretninger</h1></header>
-	
-	<div>
-		<a href="">
-			Biotek Mat/Biotek Idræt
-		</a>
-	</div>
 
-	<div>
-		<a href="">
-			Game Design
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Robotteknologi
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Science Talent
-		</a>
-	</div>
-
-	<div>
-		<a href="">
-			Sundhedsteknologi
-		</a>
-	</div>
-
+<!-- Form using radio type, allows user to only select one option -->
+	<form>
+		<input type="radio" name="linje">Biotek Mat/Biotek Idræt
+			<br>
+		<input type="radio" name="linje">Game Design
+			<br>
+		<input type="radio" name="linje">Robotteknologi
+			<br>
+		<input type="radio" name="linje">Science Talent
+			<br>
+		<input type="radio" name="linje">Sundhedsteknologi
+			<br><br>
+		<input type="submit" name="submit">
+	</form>
 
 </body>
 </html>
