--- a/htx_link.html
+++ b/htx_link.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Uddannelses vælger</title>
 </head>
 <body>
 	<header><h1>Studieretninger</h1></header>
